# LoRaGro

./: LICENSE  LICENSE-DOCS.md  LICENSE-HARDWARE.md  README.md  commit-all.sh
.west/: config
Docs/: architecture.md  lora_protocol.md  pin_assingment.md
FW-LoRaGro/: .gitignore  .zephyrrc  Kconfig  run_all_tests.sh  west.yml
FW-LoRaGro/Fino-LoRaGro/: .gitignore  CMakeLists.txt  README.md  prj.conf
FW-LoRaGro/Fino-LoRaGro/boards/: nrf52_bsim.conf  nrf52_bsim.overlay  promicro_nrf52840.conf  promicro_nrf52840.overlay
FW-LoRaGro/Fino-LoRaGro/include/: app.hpp
FW-LoRaGro/Fino-LoRaGro/src/: app.cpp  main.cpp
FW-LoRaGro/common/: CMakeLists.txt  Kconfig
FW-LoRaGro/common/drivers/: CMakeLists.txt
FW-LoRaGro/common/drivers/lora/: CMakeLists.txt  Kconfig  sx1262_fake.c  sx1262_fake.cpp
FW-LoRaGro/common/drivers/regulator_fake/: CMakeLists.txt  Kconfig  regulator_fake.c
FW-LoRaGro/common/drivers/sensor_bme280_fake/: CMakeLists.txt  Kconfig  sensor_bme280_fake.c
FW-LoRaGro/common/dts/bindings/: vendor-prefixes.txt
FW-LoRaGro/common/include/: app.hpp  application.hpp  config_manager.hpp  data_types.hpp  fake_driver_adapters.hpp  od.hpp  power_management.hpp  power_rail_3v3.hpp  sample_manager.hpp  time_manager.hpp
FW-LoRaGro/common/include/lora/: lora_auth.hpp  lora_frame_codec.hpp  lora_interface.hpp  lora_packetizer.hpp  lora_protocol.hpp  lora_protocol_c.h  lora_protocol_handler.hpp
FW-LoRaGro/common/include/regs/: bme280_calib.hpp  bme280_regs.hpp
FW-LoRaGro/common/src/: CMakeLists.txt  app.cpp  bme280_sensor.cpp  config_manager.cpp  fake_driver_adapters.cpp  lora_auth.cpp  lora_frame_codec.cpp  lora_interface.cpp  lora_packetizer.cpp  lora_protocol_handler.cpp  power_management.cpp  power_rail_3v3.cpp  sample_manager.cpp
FW-LoRaGro/common/zephyr/: module.yml
FW-LoRaGro/tests/power_rail_3v3/: CMakeLists.txt  prj.conf  test_power_rail_3v3.cpp  testcase.yaml
FW-LoRaGro/tests/power_rail_3v3/boards/: native_sim.overlay  nrf52_bsim.conf
FW-LoRaGro/tests/sensors/: CMakeLists.txt  prj.conf  test_battery_sense.cpp  test_co2_sensor_adapter.cpp  test_soil_capacitive_adapter.cpp  testcase.yaml
FW-LoRaGro/tests/sensors/boards/: native_sim.overlay
FW-LoRaGro/twister-out/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
(+907 files in other folders)
